backup_cleanup_20260411_2019/Backend/test_reports/fast_tests_20260411_195015_output.txt
Command: C:\Python313\python.exe -m pytest -m not slow --tb=short --html=f:\GrobsAI-Complete\Backend\test_reports\fast_tests_20260411_195015.html --junitxml=f:\GrobsAI-Complete\Backend\test_reports\fast_tests_20260411_195015.xml --self-contained-html
Return code: 1
STDOUT:
============================= test session starts =============================
platform win32 -- Python 3.13.5, pytest-8.4.1, pluggy-1.6.0
rootdir: f:\GrobsAI-Complete\Backend
plugins: anyio-3.7.1, asyncio-1.3.0, cov-7.1.0, html-4.2.0, metadata-3.1.1, xdist-3.8.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 245 items

tests\test_ai_resume.py FF                                               [  0%]
tests\test_analytics.py ....                                             [  2%]
tests\test_auth.py ..........                                            [  6%]
tests\test_enhanced_resume_service.py .....F..F........F.F......         [ 17%]
tests\test_integration.py ........................                       [ 26%]
tests\test_interview.py ......                                           [ 29%]
tests\test_jobs.py ............                                          [ 34%]
tests\test_matching_scoring.py ................................          [ 47%]
tests\test_models.py ........F........................                   [ 60%]
tests\test_resume_service.py ..................................FFF       [ 75%]
tests\test_resumes.py ...........                                        [ 80%]
tests\test_security.py ........................................          [ 96%]
tests\test_users.py ........                                             [100%]

================================== FAILURES ===================================
______________________ test_calculate_ats_score_success _______________________
tests\test_ai_resume.py:78: in test_calculate_ats_score_success
    result = await calculate_ats_score(mock_resume, "Looking for a Python dev with Kubernetes")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:281: in calculate_ats_score
    return _heuristic_only_report(resume, resume_text, jd_requirements, target_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:658: in _heuristic_only_report
    links = re.findall(r"https?://(?:www\.)?[\w\-]+\.(?:com|io|me|net|dev)/[^\s]*", text)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python313\Lib\re\__init__.py:278: in findall
    return _compile(pattern, flags).findall(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: expected string or bytes-like object, got 'MagicMock'
---------------------------- Captured stdout call -----------------------------
2026-04-11 19:50:58,624 - app.services.resume_service.ats_analyzer - [32mINFO[0m - Heuristic mode for resume 1
------------------------------ Captured log call ------------------------------
INFO     app.services.resume_service.ats_analyzer:ats_analyzer.py:280 Heuristic mode for resume 1
______________________ test_calculate_ats_score_failure _______________________
tests\test_ai_resume.py:93: in test_calculate_ats_score_failure
    result = await calculate_ats_score(mock_resume, "Some job")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:281: in calculate_ats_score
    return _heuristic_only_report(resume, resume_text, jd_requirements, target_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:658: in _heuristic_only_report
    links = re.findall(r"https?://(?:www\.)?[\w\-]+\.(?:com|io|me|net|dev)/[^\s]*", text)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python313\Lib\re\__init__.py:278: in findall
    return _compile(pattern, flags).findall(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: expected string or bytes-like object, got 'MagicMock'
---------------------------- Captured stdout call -----------------------------
2026-04-11 19:50:59,254 - app.services.resume_service.ats_analyzer - [32mINFO[0m - Heuristic mode for resume 1
------------------------------ Captured log call ------------------------------
INFO     app.services.resume_service.ats_analyzer:ats_analyzer.py:280 Heuristic mode for resume 1
_____________________ TestMLScorer.test_extract_features ______________________
tests\test_enhanced_resume_service.py:116: in test_extract_features
    self.assertIsInstance(features, list)
E   AssertionError: array([ 0. ,  0. ,  3. ,  0. ,  3. ,  2. , 10.5, 50. ,  1. ,  5. , 10. ,
E           0. , 70. , 70. , 75. ]) is not an instance of <class 'list'>
________________________ TestMLScorer.test_train_model ________________________
tests\test_enhanced_resume_service.py:164: in test_train_model
    self.assertIn("accuracy", metrics)
E   AssertionError: 'accuracy' not found in {'error': 'Invalid classes inferred from unique values of `y`.  Expected: [0], got [1]'}
---------------------------- Captured stdout call -----------------------------
2026-04-11 19:52:19,073 - app.services.resume_service.ml_scorer - [31mERROR[0m - Model training failed: Invalid classes inferred from unique values of `y`.  Expected: [0], got [1]
------------------------------ Captured log call ------------------------------
ERROR    app.services.resume_service.ml_scorer:ml_scorer.py:521 Model training failed: Invalid classes inferred from unique values of `y`.  Expected: [0], got [1]
____________________ TestEnsembleParser.test_parse_resume _____________________
tests\test_enhanced_resume_service.py:292: in test_parse_resume
    self.assertIsInstance(result, dict)
E   AssertionError: ParsedResumeWithConfidence(full_name=ConfidenceScore(value={'full_name': 'John Doe'}, confidence=0.85, source='heuristic', alternatives=[]), email=ConfidenceScore(value='john@example.com', confidence=0.95, source='regex', alternatives=[]), phone=ConfidenceScore(value='+1234567890', confidence=0.95, source='regex', alternatives=[]), linkedin_url=None, github_url=None, location=ConfidenceScore(value='', confidence=0.0, source='none', alternatives=[]), title=ConfidenceScore(value='Software Engineer', confidence=0.75, source='heuristic', alternatives=[]), summary=ConfidenceScore(value='', confidence=0.7, source='heuristic', alternatives=[]), target_role=ConfidenceScore(value='', confidence=0.0, source='none', alternatives=[]), education=ConfidenceScore(value=[{'school': '', 'degree': 'B.Tech', 'major': 'Computer Science', 'gpa': '', 'start_date': '', 'end_date': '', 'current': False, 'location': '', 'description': 'B.Tech in Computer Science'}, {'school': 'ABC University', 'degree': '', 'major': '', 'gpa': '', 'start_date': '2018', 'end_date': '2022', 'current': False, 'location': '', 'description': 'ABC University, 2018-2022'}], confidence=0.8, source='heuristic', alternatives=[]), experience=ConfidenceScore(value=[{'company': 'Software Developer at XYZ Corp', 'role': '', 'location': '', 'start_date': '', 'end_date': '', 'current': False, 'description': '', 'points': []}, {'company': '', 'role': '', 'location': '', 'start_date': 'Jan 2022', 'end_date': '', 'current': True, 'description': 'Developed web applications\nLed team projects', 'points': ['Developed web applications', 'Led team projects']}], confidence=0.8, source='heuristic', alternatives=[]), projects=ConfidenceScore(value=[], confidence=0.3, source='heuristic', alternatives=[]), skills=ConfidenceScore(value=[{'name': 'Python', 'category': 'Technical'}, {'name': 'JavaScript', 'category': 'Technical'}, {'name': 'React', 'category': 'Technical'}], confidence=0.8, source='ensemble', alternatives=[]), achievements=ConfidenceScore(value=[], confidence=0.3, source='heuristic', alternatives=[]), certifications=ConfidenceScore(value=[], confidence=0.3, source='heuristic', alternatives=[]), overall_confidence=0.751, parsing_method='heuristic', parsing_time_ms=13.56, raw_text='\n        John Doe\n        Software Engineer\n        Email: john@example.com\n        Phone: +1234567890\n        \n        EDUCATION\n        B.Tech in Computer Science\n        ABC University, 2018-2022\n        \n        EXPERIENCE\n        Software Developer at XYZ Corp\n        Jan 2022 - Present\n        - Developed web applications\n        - Led team projects\n        \n        SKILLS\n        Python, JavaScript, React\n        ') is not an instance of <class 'dict'>
_________________ TestEnhancedATSAnalyzer.test_analyze_resume _________________
tests\test_enhanced_resume_service.py:396: in test_analyze_resume
    self.assertIsInstance(result, dict)
E   AssertionError: <coroutine object EnhancedATSAnalyzer.analyze_resume at 0x00000193800DED90> is not an instance of <class 'dict'>
---------------------------- Captured stdout call -----------------------------
2026-04-11 19:52:19,137 - sentence_transformers.SentenceTransformer - [32mINFO[0m - Use pytorch device_name: cpu
2026-04-11 19:52:19,138 - sentence_transformers.SentenceTransformer - [32mINFO[0m - Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2
2026-04-11 19:52:22,513 - app.services.resume_service.embedding_service - [32mINFO[0m - HuggingFace embeddings initialized with sentence-transformers/all-MiniLM-L6-v2
2026-04-11 19:52:22,513 - app.services.resume_service.ml_scorer - [32mINFO[0m - No pre-trained ML model found. Will use fallback or require training.
------------------------------ Captured log call ------------------------------
INFO     sentence_transformers.SentenceTransformer:SentenceTransformer.py:219 Use pytorch device_name: cpu
INFO     sentence_transformers.SentenceTransformer:SentenceTransformer.py:227 Load pretrained SentenceTransformer: sentence-transformers/all-MiniLM-L6-v2
INFO     app.services.resume_service.embedding_service:embedding_service.py:114 HuggingFace embeddings initialized with sentence-transformers/all-MiniLM-L6-v2
INFO     app.services.resume_service.ml_scorer:ml_scorer.py:127 No pre-trained ML model found. Will use fallback or require training.
____________________ TestSkillModel.test_skill_unique_name ____________________
tests\test_models.py:215: in test_skill_unique_name
    with pytest.raises(Exception):  # Should raise integrity error
         ^^^^^^^^^^^^^^^^^^^^^^^^
E   Failed: DID NOT RAISE <class 'Exception'>
_______ TestATSScoreCalculation.test_calculate_ats_score_with_mock_llm ________
tests\test_resume_service.py:424: in test_calculate_ats_score_with_mock_llm
    result = await calculate_ats_score(sample_resume, jd)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:281: in calculate_ats_score
    return _heuristic_only_report(resume, resume_text, jd_requirements, target_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:658: in _heuristic_only_report
    links = re.findall(r"https?://(?:www\.)?[\w\-]+\.(?:com|io|me|net|dev)/[^\s]*", text)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python313\Lib\re\__init__.py:278: in findall
    return _compile(pattern, flags).findall(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: expected string or bytes-like object, got 'MagicMock'
---------------------------- Captured stdout call -----------------------------
2026-04-11 19:53:04,948 - app.services.resume_service.ats_analyzer - [32mINFO[0m - Heuristic mode for resume 1
------------------------------ Captured log call ------------------------------
INFO     app.services.resume_service.ats_analyzer:ats_analyzer.py:280 Heuristic mode for resume 1
____ TestATSScoreCalculation.test_calculate_ats_score_llm_failure_fallback ____
tests\test_resume_service.py:436: in test_calculate_ats_score_llm_failure_fallback
    result = await calculate_ats_score(sample_resume, jd)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:281: in calculate_ats_score
    return _heuristic_only_report(resume, resume_text, jd_requirements, target_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:658: in _heuristic_only_report
    links = re.findall(r"https?://(?:www\.)?[\w\-]+\.(?:com|io|me|net|dev)/[^\s]*", text)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python313\Lib\re\__init__.py:278: in findall
    return _compile(pattern, flags).findall(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: expected string or bytes-like object, got 'MagicMock'
---------------------------- Captured stdout call -----------------------------
2026-04-11 19:53:04,998 - app.services.resume_service.ats_analyzer - [32mINFO[0m - Heuristic mode for resume 1
------------------------------ Captured log call ------------------------------
INFO     app.services.resume_service.ats_analyzer:ats_analyzer.py:280 Heuristic mode for resume 1
__________ TestATSScoreCalculation.test_calculate_ats_score_empty_jd __________
tests\test_resume_service.py:446: in test_calculate_ats_score_empty_jd
    result = await calculate_ats_score(sample_resume, "")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:281: in calculate_ats_score
    return _heuristic_only_report(resume, resume_text, jd_requirements, target_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
app\services\resume_service\ats_analyzer.py:658: in _heuristic_only_report
    links = re.findall(r"https?://(?:www\.)?[\w\-]+\.(?:com|io|me|net|dev)/[^\s]*", text)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python313\Lib\re\__init__.py:278: in findall
    return _compile(pattern, flags).findall(string)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   TypeError: expected string or bytes-like object, got 'MagicMock'
---------------------------- Captured stdout call -----------------------------
2026-04-11 19:53:05,047 - app.services.resume_service.ats_analyzer - [32mINFO[0m - Heuristic mode for resume 1
------------------------------ Captured log call ------------------------------
INFO     app.services.resume_service.ats_analyzer:ats_analyzer.py:280 Heuristic mode for resume 1
============================== warnings summary ===============================
app\database\session.py:33
  f:\GrobsAI-Complete\Backend\app\database\session.py:33: MovedIn20Warning: The ``declarative_base()`` function is now available as sqlalchemy.orm.declarative_base(). (deprecated since: 2.0) (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)
    Base = declarative_base()

app\services\resume_service\ensemble_parser.py:91
  f:\GrobsAI-Complete\Backend\app\services\resume_service\ensemble_parser.py:91: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/
    @validator('phone')

app\services\resume_service\ensemble_parser.py:101
  f:\GrobsAI-Complete\Backend\app\services\resume_service\ensemble_parser.py:101: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/
    @validator('linkedin_url')

app\services\resume_service\ensemble_parser.py:107
  f:\GrobsAI-Complete\Backend\app\services\resume_service\ensemble_parser.py:107: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/
    @validator('github_url')

C:\Users\NISHANT\AppData\Roaming\Python\Python313\site-packages\pydantic\_internal\_config.py:295: 31 warnings
  C:\Users\NISHANT\AppData\Roaming\Python\Python313\site-packages\pydantic\_internal\_config.py:295: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/
    warnings.warn(DEPRECATION_MESSAGE, DeprecationWarning)

tests/test_analytics.py::TestAnalytics::test_get_analytics_default_range
  f:\GrobsAI-Complete\Backend\app\services\auth_service.py:77: SAWarning: relationship 'JobSkill.job' will copy column jobs.id to column job_skills.job_id, which conflicts with relationship(s): 'Skill.jobs' (copies jobs.id to job_skills.job_id). If this is not the intention, consider if these relationships should be linked with back_populates, or if viewonly=True should be applied to one or more if they are read-only. For the less common case that foreign key constraints are partially overlapping, the orm.foreign() annotation can be used to isolate the columns that should be written towards.   To silence this warning, add the parameter 'overlaps="jobs"' to the 'JobSkill.job' relationship. (Background on this warning at: https://sqlalche.me/e/20/qzyx) (This warning originated from the `configure_mappers()` process, which was invoked automatically in response to a user-initiated operation.)
    existing_user = self.db.query(User).filter(User.email == email).first()

tests/test_analytics.py: 2 warnings
tests/test_auth.py: 8 warnings
tests/test_integration.py: 45 warnings
tests/test_jobs.py: 6 warnings
tests/test_models.py: 132 warnings
tests/test_resumes.py: 4 warnings
tests/test_users.py: 2 warnings
  C:\Users\NISHANT\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\sql\schema.py:3596: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    return util.wrap_callable(lambda ctx: fn(), fn)  # type: ignore

tests/test_analytics.py: 3 warnings
tests/test_auth.py: 1 warning
tests/test_integration.py: 41 warnings
tests/test_interview.py: 5 warnings
tests/test_jobs.py: 11 warnings
tests/test_resumes.py: 10 warnings
tests/test_security.py: 20 warnings
tests/test_users.py: 7 warnings
  C:\Users\NISHANT\AppData\Roaming\Python\Python313\site-packages\jose\jwt.py:311: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    now = timegm(datetime.utcnow().utctimetuple())

tests/test_integration.py::TestResumeIntegration::test_complete_resume_workflow
tests/test_integration.py::TestResumeIntegration::test_resume_ats_analysis_workflow
tests/test_integration.py::TestJobApplicationIntegration::test_application_with_job_matching
tests/test_integration.py::TestErrorHandling::test_duplicate_resource_creation
tests/test_integration.py::TestErrorHandling::test_large_payload_handling
tests/test_integration.py::TestErrorHandling::test_xss_prevention
tests/test_integration.py::TestConcurrentOperations::test_concurrent_resume_updates
tests/test_resumes.py::TestResumeEndpoints::test_create_resume
  f:\GrobsAI-Complete\Backend\app\routers\resume_router.py:74: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/
    resume_data=resume_data.dict()

tests/test_integration.py::TestResumeIntegration::test_complete_resume_workflow
  <frozen abc>:123: RuntimeWarning: coroutine 'EnhancedATSAnalyzer.analyze_resume' was never awaited
  Enable tracemalloc to get traceback where the object was allocated.
  See https://docs.pytest.org/en/stable/how-to/capture-warnings.html#resource-warnings for more info.

tests/test_integration.py::TestResumeIntegration::test_complete_resume_workflow
tests/test_integration.py::TestConcurrentOperations::test_concurrent_resume_updates
tests/test_integration.py::TestConcurrentOperations::test_concurrent_resume_updates
  f:\GrobsAI-Complete\Backend\app\routers\resume_router.py:176: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/
    update_data = {k: v for k, v in resume_data.dict().items() if v is not None}

tests/test_integration.py::TestDatabaseTransactions::test_transaction_rollback_on_error
tests/test_models.py::TestUserModel::test_user_unique_email
tests/test_models.py::TestSubscriptionPlanModel::test_subscription_plan_unique_name
  F:\GrobsAI-Complete\Backend\tests\conftest.py:65: SAWarning: transaction already deassociated from connection
    transaction.rollback()

tests/test_models.py::TestJobModel::test_job_creation
  C:\Users\NISHANT\AppData\Roaming\Python\Python313\site-packages\sqlalchemy\engine\default.py:941: DeprecationWarning: The default datetime adapter is deprecated as of Python 3.12; see the sqlite3 documentation for suggested replacement recipes
    cursor.execute(statement, parameters)

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
- generated xml file: f:\GrobsAI-Complete\Backend\test_reports\fast_tests_20260411_195015.xml -
- Generated html report: file:///f:/GrobsAI-Complete/Backend/test_reports/fast_tests_20260411_195015.html -
=========================== short test summary info ===========================
FAILED tests/test_ai_resume.py::test_calculate_ats_score_success - TypeError:...
FAILED tests/test_ai_resume.py::test_calculate_ats_score_failure - TypeError:...
FAILED tests/test_enhanced_resume_service.py::TestMLScorer::test_extract_features
FAILED tests/test_enhanced_resume_service.py::TestMLScorer::test_train_model
FAILED tests/test_enhanced_resume_service.py::TestEnsembleParser::test_parse_resume
FAILED tests/test_enhanced_resume_service.py::TestEnhancedATSAnalyzer::test_analyze_resume
FAILED tests/test_models.py::TestSkillModel::test_skill_unique_name - Failed:...
FAILED tests/test_resume_service.py::TestATSScoreCalculation::test_calculate_ats_score_with_mock_llm
FAILED tests/test_resume_service.py::TestATSScoreCalculation::test_calculate_ats_score_llm_failure_fallback
FAILED tests/test_resume_service.py::TestATSScoreCalculation::test_calculate_ats_score_empty_jd
========== 10 failed, 235 passed, 349 warnings in 145.26s (0:02:25) ===========

STDERR:

